fix(browse): sidebar is too small on mobile

--- a/web/pages/components/layout/with-sidebar.less
+++ b/web/pages/components/layout/with-sidebar.less
@@ -42,7 +42,7 @@
         }
 
         &>aside {
-            min-width: @screen-min;
+            min-width: min(100vw - 4rem, @screen-min);
         }
     }
 }
